[package]
name = "build-lod"
version = "0.1.0"
description = "Convert PLY/SPZ/SPLAT files to RAD/SPZ format with LOD support"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["ply", "rad", "gaussian-splatting", "3d", "conversion"]
categories = ["command-line-utilities", "multimedia::encoding"]

[[bin]]
name = "build-lod"
path = "src/main.rs"

[features]
default = ["gpu"]
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck", "dep:half"]

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
spark-lib = { path = "../spark-lib" }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
half = { workspace = true, optional = true }

# cargo-deb configuration for Linux package
[package.metadata.deb]
maintainer = "World Labs Technologies <noreply@sparkjs.dev>"
copyright = "2024, World Labs Technologies"
extended-description = "Convert PLY/SPZ/SPLAT files to RAD/SPZ format with LOD support"
depends = ""
section = "utility"
priority = "optional"
assets = [
    ["target/release/build-lod", "usr/bin/build-lod", "755"],
]
